2006-09-07  Claes Nästén  <me{@}pekdon{.}net>

	* src/Config.cc (Config::parseAction): 
	Updated ShowCmdDialog action to support parameter setting initial
	value. Useful together with action such as GotoClientID binding
	a keybinding to ShowCmdDialog GotoClientID for quick navigation.

	* src/ActionHandler.cc (ActionHandler::actionGotoClientID): 	
	Added GotoClientID action which goes to and focuses client with
	ID.

	* src/PDecor.cc: 
	Added boolean option ShowClientID under the Screen section of the
	main config file. This enable/disable display of Client ID in
	titles. 

2006-09-06  Claes Nästén  <me{@}pekdon{.}net>

	* src/Client.cc (Client::Client):
	Moved the Client list to Client. Added clientid list to Client so that
	it is possible to keep track of Client ids, preparation of number
	based navigation.

	* src/PDecor.hh (PDecor::TitleItem): 
	Extend PDecor::TitleItem with information to include client id.

	* src/Frame.cc (Frame::Frame): 
	Moved the Frame list to Frame.

2006-09-03  Claes Nästén  <me{@}pekdon{.}net>

	* src/CmdDialog.cc (CmdDialog::bufKill): 
	Added action ClearFromCursor for CmdDialog to erase characters from
	current cursor position to the end of line.

2006-08-31  Claes Nästén  <me{@}pekdon{.}net>

	* src/Frame.cc (Frame): 
	Moved tagged frame information to Frame.

2006-08-30  Claes Nästén  <me{@}pekdon{.}net>

	* src/Frame.cc (Frame::setStateTitle): 
	Make custom set titles persist between restarts.

	* src/CfgParser.cc (CfgParser::Entry::free_tree): 
	Plug major memory leak in CfgParser.

	* src/PDecor.cc (PDecor::doMove): 
	Update moving to only use the root position of the pointer to support
	more ways of initiating moving and then also keep correct position.
	Close #94
	( Thanks Jowi and shared for reporting )

2006-08-28  Claes Nästén  <me{@}pekdon{.}net>

	* src/WindowManager.cc (WindowManager::updateMenus): 
	Fix issue in reload causing dangling pointer to custom menus hang