@@ -945,10 +945,10 @@ ActionHandler::findClientFromTitle(const std::string &or_title)
 {
     RegexString o_rs;
 
-    if (o_rs.parse_match (or_title)) {
+    if (o_rs.parse_match(or_title, true)) {
         list<Client*>::iterator it (Client::client_begin());
         for (; it != Client::client_end (); ++it) {
-            if (o_rs == (*it)->getTitle()->getReal()) {
+            if (o_rs == (*it)->getTitle()->getVisible()) {
                 return (*it);
             }
         }
